force-app/main/default/objects/my_class__c/my_class__c.object-meta.xml
<CustomObject>
    <label>my class</label>
    <nameField>
        <label>my class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>my classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>