force-app/main/default/objects/my_class__c/fields/core__c.field-meta.xml
<CustomField>
    <fullName>core__c</fullName>
    <label>core</label>
    <length>10</length>
    <type>Text</type>
</CustomField>