force-app/main/default/objects/my_class__c/fields/lanuage__c.field-meta.xml
<CustomField>
    <fullName>lanuage__c</fullName>
    <label>language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>