force-app/main/default/objects/my_class__c/fields/program__c.field-meta.xml
<CustomField>
    <fullName>program__c</fullName>
    <label>program</label>
    <length>10</length>
    <type>Text</type>
</CustomField>