force-app/main/default/objects/my_class__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>subject</label>
    <length>10</length>
    <type>Text</type>
</CustomField>