force-app/main/default/objects/my_class__c/fields/tool__c.field-meta.xml
<CustomField>
    <fullName>tool__c</fullName>
    <label>tool</label>
    <length>10</length>
    <type>Text</type>
</CustomField>